# oberon0_compiler

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  REUSE.toml  pyproject.toml
.github/: cliff.toml
.github/workflows/: ci.yml  docs.yml  release.yml
LICENSES/: MIT.txt
docs/: conf.py  index.rst
docs/api/: ast.rst  cli.rst  index.rst  parser.rst  scanner.rst  sym_table.rst  systemcalls.rst  token.rst  types.rst
examples/: add.Mod  print2x.Mod  print42.Mod  print42.wasm
src/oberon0_compiler/: __init__.py  ast.py  code_gen.py  parser.py  scanner.py  sym_table.py  systemcalls.py  token.py  type_checker.py  types.py
tests/: test_parser.py  test_scanner.py
